--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
         "lint": "tslint --fix --project .",
         "prebuild": "npm run lint",
         "build": "tsc",
-        "postbuild":
-            "ln -rsf ./build/src/index.js ./bin/index.js && chmod +x ./bin/index.js",
+        "postbuild": "ln -rsf ./build/src/index.js ./bin/index.js && chmod +x ./bin/index.js",
         "pretest": "npm run build",
         "test": "mocha",
         "prerun": "npm run build",
@@ -23,7 +22,8 @@
     },
     "devDependencies": {
         "@types/chai": "^4.1.3",
-        "@types/mocha": "^5.2.0",
+        "@types/mocha": "^5.2.5",
+        "@types/module-alias": "^2.0.0",
         "@types/node": "^10.1.2",
         "chai": "^4.1.2",
         "mocha": "^5.1.1",
@@ -32,5 +32,7 @@
         "source-map-support": "^0.5.6",
         "tslint-config-prettier": "^1.13.0"
     },
-    "pre-commit": ["test"]
+    "pre-commit": [
+        "test"
+    ]
 }
